# meshetar-tui

./: .envrc  .gitignore  Cargo.toml  LICENSE  README.md  requirements.txt  summary.css
.config/: example_env.toml
.github/workflows/: cd.yml
models/: backtest.py  create_model.py  run_model.py
src/: action.rs  app.rs  components.rs  config.rs  events.rs  main.rs  screens.rs  tui.rs  utils.rs
src/assets/: asset_ticker.rs  backtest_ticker.rs  error.rs  mod.rs
src/components/: form.rs  header.rs  list.rs  select.rs  style.rs
src/components/form/: input.rs  select.rs
src/core/: error.rs  mod.rs
src/database/: error.rs  mod.rs
src/exchange/: account.rs  binance_client.rs  error.rs  execution.rs  mod.rs
src/portfolio/: account.rs  balance.rs  error.rs  mod.rs  position.rs
src/screens/: exchange.rs  home.rs  model_config.rs  models.rs  report.rs  run_config.rs  running.rs  sessions.rs
src/statistic/: mod.rs
src/strategy/: error.rs  mod.rs
src/trading/: error.rs  execution.rs  mod.rs
src/utils/: binance_client.rs  formatting.rs  load_config.rs
