[package]
name = "meshetar-tui"
version = "0.1.0"
edition = "2021"
description = "Meshetar with TUI"
repository = "https://github.com/belakm/meshetar-tui"
authors = ["Mitja Belak"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
better-panic = "0.3.0"
binance_spot_connector_rust = { version = "1", features = [
  "enable-hyper",
  "enable-tokio-tungstenite",
], path = "../binance-spot-connector-rust" }
chrono = { version = "0.4.31", features = ["serde"] }
clap = { version = "4.4.5", features = [
  "derive",
  "cargo",
  "wrap_help",
  "unicode",
  "string",
  "unstable-styles",
] }
color-eyre = "0.6.2"
config = "0.13.3"
crossterm = { version = "0.27.0", features = ["serde", "event-stream"] }
derive_deref = "1.1.1"
directories = "5.0.1"
futures = "0.3.28"
hyper-tls = "0.5.0"
hyper = "0.14.9"
human-panic = "1.2.0"
json5 = "0.4.1"
lazy_static = "1.4.0"
libc = "0.2.148"
log = "0.4.20"
pretty_assertions = "1.4.0"
ratatui = { version = "0.24.0", features = ["serde", "macros"] }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
signal-hook = "0.3.17"
sqlx = { version = "0.7.2", features = [
  "runtime-tokio",
  "tls-rustls",
  "sqlite",
  "chrono",
] }
strip-ansi-escapes = "0.2.0"
strum = { version = "0.25.0", features = ["derive"] }
thiserror = "1.0.50"
tokio = { version = "1.32.0", features = ["full"] }
tokio-util = "0.7.9"
tracing = "0.1.37"
tracing-error = "0.2.0"
tracing-subscriber = { version = "0.3.17", features = ["env-filter", "serde"] }
uuid = { version = "1.6.1", features = ["v4", "serde"] }
prettytable-rs = "0.10.0"
pyo3 = { version = "0.20.0", features = ["auto-initialize"] }
toml = "0.8.8"
